archive/virt/cdi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdi-uploadproxy
  namespace: cdi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "70G"
spec:
  ingressClassName: nginx
  rules:
    - host: cdi-upload.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: cdi-uploadproxy
                port:
                  number: 443
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - cdi-upload.skylab.fi
      secretName: skylab.fi-tls
